Added icons and still working on checkout flow

--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -8,9 +8,10 @@
        <h1><%= order.drinks %></h1>
       </div>
 
-      <div class="span3 offset3">
-          <a href="#" class="order_id_<%= order.id %>">
-          <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/grey_dot.png" class="img-circle"></a>
+      <div class="span3 offset3" style="color: #e0e1de">
+          <div class="order_id_<%= order.id %>">
+              <h2><i class="icon-circle icon-4x"></i></h2>
+          </div>
       </div>
     </div>
 
