--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -3,7 +3,7 @@
 	<div style="padding:10px;" class="span12">
 		<h5><a href="/venue/<%= @order.venue %>"><%= @order.venue %></a> at <a href="/venue/<%= @order.venue %>/table/<%= @order.table %>"><%= @order.table %></a></h5>
   	<h4><%= @order.drinks %></h4>
-  	<p><%= @order.firstname %> <%= @order.lastname %></p>
+  	<p>by <%= @order.firstname %> <%= @order.lastname %></p>
   </div>
 </div>
 
