--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -1,8 +1,8 @@
 <div id='content'>
-<h3>User's Orders</h3><hr>
+<h3><%= firstname %>'s Orders</h3><hr>
   <% @orders.each do |order| %>
           
-    <h5><%= order.lastname %> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h5>
+    <h5><%= order.lastname %> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>"> <%= order.table %></a></h5>
     <h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h4>
     <p>from <%= order.phone %></p>
     <hr>
