--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,20 +24,17 @@
 
             <ul class="nav pull-right">
               <li class="dropdown">
-                <a href="#"
+                <div
+                      style="padding-top: 10px; color: white"
                       class="dropdown-toggle"
                       data-toggle="dropdown">
-                      <%= lastname %>
-                      <b class="caret"></b>
-                </a>
+                      <i class="icon-reorder icon-large"></i>
+                </div>
                 <ul class="dropdown-menu">
-                      <li><a href="/orders/drinks">Another Drink Order</a></li>
-                      <li>-----------------------------</li>
-                      <li><a href="/location/change">Change Location</a></li>
-                      <li>-----------------------------</li>
-                      <li><a href="/user/<%= phone %>">Your Orders</a></li>
-                      <li>-----------------------------</li>
-                      <li><a href="/checkout">Close your tab</a></li>
+                      <li><a href="/orders/drinks"><i class="icon-glass"></i> Another Drink Order</a></li>
+                      <li><a href="/location/change"><i class="icon-map-marker"></i> Change Location</a></li>
+                      <li><a href="/user/<%= phone %>"><i class="icon-list-ul"></i> <%= firstname %>'s Orders</a></li>
+                      <li><a href="/checkout"><i class="icon-signout"></i> Close your tab</a></li>
                 </ul>
               </li>
             </ul>
