--- a/views/orders/drinks.erb
+++ b/views/orders/drinks.erb
@@ -4,7 +4,7 @@
 
 <form action='/orders' method='post' class="form-horizontal">
   			
-	<p><input class="span12" type="text" id="order_drinks" name="order[drinks]" value="<%= @order.drinks %>" placeholder="ex. 2 Tito's and Sodas with Lime" autofocus></p>
+	<p><input class="span12" type="text" id="order_drinks" name="order[drinks]" value="<%= @order.drinks %>"></p>
 
 	<p><input class="btn btn-large btn-info" type='submit' value='Send Drink Order'></p>
 </form>
