Was refreshing to the wrong page

--- a/views/moontower.erb
+++ b/views/moontower.erb
@@ -37,7 +37,7 @@
     <script>
       $(document).ready(function() {
         setTimeout(function() {
-          $('#content').load('/barkeeper');}, 2000);
+          $('#content').load('/moontower');}, 2000);
       });
 
       $(document).ready(function() {
