--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,12 +24,12 @@
 
             <ul class="nav pull-right">
               <li class="dropdown">
-                <div
-                      style="padding-top: 10px; color: white"
+                <a
+                      style="padding-top: 10px; a: white"
                       class="dropdown-toggle"
                       data-toggle="dropdown">
                       <i class="icon-reorder icon-large"></i>
-                </div>
+                </a>
                 <ul class="dropdown-menu">
                       <li><a href="/orders/drinks"><i class="icon-glass"></i> Another Drink Order</a></li>
                       <li><a href="/location/change"><i class="icon-map-marker"></i> Change Location</a></li>
