--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
 
             <ul class="nav pull-right">
               <li class="dropdown">
-                <a
+                <a href="#"
                       style="padding-top: 10px; a: white"
                       class="dropdown-toggle"
                       data-toggle="dropdown">
