--- a/views/moontower.erb
+++ b/views/moontower.erb
@@ -26,7 +26,9 @@
             url: "/orders/received/<%= order.id %>",
             }).done(function() {
               $(this).remove();
-          $(".top-row").html("<%= order.lastname %> at <%= order.venue %> <%= order.table %>");
+          $(".top-row").html("<h2><%= order.lastname %> at <%= order.venue %> <%= order.table %></h2>");
+          $(".main-row").html("<h1><%= order.drinks %></h1>");
+          $(".bottom-row").html("<h3>a few seconds ago</h3>");
           });
         });
       });
@@ -37,7 +39,7 @@
     <script>
       $(document).ready(function() {
         setTimeout(function() {
-          $('#content').load('/moontower');}, 2000);
+          $('#content').load('/moontower');}, 10000);
       });
 
       $(document).ready(function() {
