--- a/views/moontower.erb
+++ b/views/moontower.erb
@@ -1,57 +1,79 @@
 <div id="content">
-    
-    <% @orders.each do |order| %>
+   
+  <% @orders.each do |order| %>
 
-    <div id="order-<%= order.id %>" class="row-fluid" style="background-color: black; color: white;">
-      
-      <div class="span6" style="padding:25px;" >
-        <div class="top-row-<%= order.id %>"></div>
-        <div class="main-row-<%= order.id %>"><h1><%= pretty_date(order.created_at) %></h1></div>
-        <div class="bottom-row-<%= order.id %>"></div>
+    <div id="order-<%= order.id %>" class="row-fluid order" data-order-id="<%= order.id %>" style="<% if order.received_at.nil? %>background-color: black; color: white;<% else %>background-color: #f9f9f9; color: black;<% end %>">
+ 
+      <div class="order-not-received <%= "hide" unless order.received_at.nil? %>">
+        <div class="span6" style="padding:25px;" >
+          <div class="top-row"></div>
+          <div class="main-row"><h1><%= pretty_date(order.created_at) %></h1></div>
+          <div class="bottom-row"></div>
+        </div>
+
+        <div class="span3 offset3" style="color: #e0e1de">
+          <div class="not-received">
+            <h2><i class="icon-circle icon-4x"></i></h2>
+          </div>
+        </div>
       </div>
 
-      <div class="span3 offset3" style="color: #e0e1de">
-        <div id="order-<%= order.id %>-status" class="<%= order.id %>-not-received">
-          <h2><i class="icon-circle icon-4x"></i></h2>
+      <div class="order-received <%= "hide" if order.received_at.nil? %>">
+        <div class="span6" style="padding:25px;" >
+          <div class="top-row"><h2><%= order.lastname %> at <%= order.venue %> <%= order.table %></h2></div>
+          <div class="main-row"><h1><%= order.drinks %></h1></div>
+          <div class="bottom-row"><h3>Order <%= order.id %> a few seconds ago</h3></div>
+        </div>
+
+        <div class="span3 offset3" style="color: #e0e1de">
+          <div class="received">
+            <h2><i class="icon-circle icon-4x"></i></h2>
+          </div>
         </div>
       </div>
     </div>
 
-    <br>
+    <br />
 
-    <script>
-      $(document).ready(function() {
-        $('.<%= order.id %>-received').click(function() {
-          $.ajax({
-            type: "PUT",
-            url: "/orders/fulfilled/<%= order.id %>",
-            }).done(function() {
-          $("#order-<%= order.id %>").fadeOut('fast');
-          });
-        });
-      });
-
-      $(document).ready(function() {
-        $('.<%= order.id %>-not-received').click(function() {
-          $.ajax({
-            type: "PUT",
-            url: "/orders/received/<%= order.id %>",
-            }).done(function() {
-          $(".top-row-<%= order.id %>").html("<h2><%= order.lastname %> at <%= order.venue %> <%= order.table %></h2>");
-          $(".main-row-<%= order.id %>").html("<h1><%= order.drinks %></h1>");
-          $(".bottom-row-<%= order.id %>").html("<h3>Order <%= order.id %> a few seconds ago</h3>");
-          $("#order-<%= order.id %>").css("background-color","#f9f9f9");
-          $("#order-<%= order.id %>").css("color","black");
-          $("#order-<%= order.id %>-status").removeClass("<%= order.id %>-not-received");
-          $("#order-<%= order.id %>-status").addClass("<%= order.id %>-received");
-          });
-        });
-      });
-      
-
-    </script>
-
-    <% end %>
-
-   
+  <% end %>
 </div>
+
+<script>
+  $(document).ready(function() {
+    $('#content').on('click', '.order .not-received', function () {
+      var $this = $(this);
+
+      $.ajax({
+        type: "PUT",
+        url: ''.concat("/orders/received/", $this.closest(".order").data("order-id")),
+      }).done(function() {
+        $this.closest(".order")
+          .find(".order-received")
+            .show()
+          .end()
+          .find(".order-not-received")
+            .hide()
+          .end()
+          .css({
+            "background-color": "#f9f9f9",
+            "color": "black"
+          });
+      });
+    });
+
+    $('#content').on('click', '.order .received', function () {
+      var $this = $(this);
+
+      $.ajax({
+        type: "PUT",
+        url: ''.concat("/orders/fulfilled/", $this.closest(".order").data("order-id")),
+      }).done(function() {
+        $this.closest(".order").remove();
+      });
+    });
+
+    setInterval(function() {
+      $('#content').load('/moontower #content');
+    }, 10000);
+  });
+</script>
