Got auto-refresh working everywhere I need

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -3,14 +3,15 @@
 		<% @orders.each do |order| %>
   				
     	<h5><a href="/venue/<%= order.venue %>"><%= order.venue %></a> at <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h5>
-    	<h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h4>
+    	<h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
     	<p>Order <%= order.id %> from <%= order.firstname %></a></p>
     	<hr>
   	<% end %>
-		<script>
-      $(document).ready(function() {
-      	setTimeout(function() {
-        	$('#content').load('/');}, 10000);
-      });
-    </script>
+		
+<script>
+  $(document).ready(function() {
+  	setTimeout(function() {
+    	$('#content').load('/');}, 10000);
+  });
+</script>
 </div>
