--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,3 +1,4 @@
+<div id='content'>
 <div class='alert alert-info'>This is your order ticket. Its status will update when the order is seen and made. Show the number to your server, turn phone sideways for longer numbers.</div>
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
@@ -13,8 +14,8 @@
 
 <script>
   $(document).ready(function() {
-   	setInterval(function() {
-   	$('#content').load('/orders/<%= @order.id %> #content');
-   	}, 10000);
-   });
+    setTimeout(function() {
+      $('#content').load('/orders/<%= @order.id %>');}, 10000);
+  });
 </script>
+</div>
