--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,8 +1,8 @@
 <div id='content'>
-<div class='alert alert-info'>This is your order ticket. Its status will update when the order is seen and made. Show the number to your server, turn phone sideways for longer numbers.</div>
+<div class='alert alert-info'>This is your order ticket. Its status will update when the order is seen and made. Show the number to your server.</div>
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
-		<h5><a href="/venue/<%= @order.venue %>"><%= @order.venue %></a> at <a href="/venue/<%= @order.venue %>/table/<%= @order.table %>"><%= @order.table %></a></h5>
+		<h5><%= @order.venue %></a> at <%= @order.table %></a></h5>
   	<h4><%= @order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></h4>
   	<p>by <%= @order.firstname %> <%= @order.lastname %></p>
   </div>
