Few more stripping of user information from views

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -2,9 +2,9 @@
 	<h3>Austin's Orders</h3><hr>
 		<% @orders.each do |order| %>
   				
-    	<h5><a href="/venue/<%= order.venue %>"><%= order.venue %></a> at <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h5>
-    	<h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
-    	<p>Order <%= order.id %> from <%= order.firstname %></a></p>
+    	<h5><%= order.venue %></a> at <%= order.table %></a></h5>
+    	<h4><%= order.drinks %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
+    	<p>Order <%= order.id %> by <%= order.firstname %></a></p>
     	<hr>
   	<% end %>
 		
