Allowing users to get to their order view

--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,10 +1,10 @@
 <div id='content'>
-<div class='alert alert-info'>This is your order ticket. Its status will update when the order is seen and made. Show the number to your server.</div>
+<div class='alert alert-info'>Your order ticket(below) will update when the order is seen and made. Show the number to your server. Other options are in the upper right navbar.</div>
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
 		<h5><%= @order.venue %> at <%= @order.table %></h5>
   	<h4><%= @order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></h4>
-  	<p>by <%= @order.firstname %> <%= @order.lastname %></p>
+  	<p><a href="/user/<%= @order.phone %>">Order <%= @order.id %> by <%= @order.firstname %> <%= @order.lastname %></a></p>
   </div>
 </div>
 
