Order number removal from main feed

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -4,7 +4,7 @@
   				
     	<h5><%= order.venue %> at <%= order.table %></h5>
     	<h4><%= order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
-    	<p>Order <%= order.id %> by <%= order.firstname %></p>
+    	<p>by <%= order.firstname %></p>
     	<hr>
   	<% end %>
 		
