Changes suggested by Richard

--- a/views/moontower.erb
+++ b/views/moontower.erb
@@ -73,7 +73,7 @@
     });
 
     setInterval(function() {
-      $('#content').load('/moontower #content');
+      $('#content').load('/moontower-barkeeper #content');
     }, 10000);
   });
 </script>
