--- a/views/moontower/checkin.erb
+++ b/views/moontower/checkin.erb
@@ -15,11 +15,13 @@
   <p>
   	<select type="text" name='table'>
   		<option>Front Covered Patio</option>
-  		<option>Main Patio Near</option>
-  		<option>Main Patio Mid</option>
-  		<option>Main Patio Far</option>
-  		<option>Side Gray Deck</option>
-  		<option>Lawn</option>
+  		<option>Main Area Near</option>
+  		<option>Main Area Mid</option>
+  		<option>Main Area Far</option>
+      <option>Washer Pit</option>
+      <option>Lawn</option>
+      <option>Side Lower Deck</option>
+  		<option>Side Upper Deck</option>
 		</select>
 	</p>
 
