--- a/views/orders/moontower.erb
+++ b/views/orders/moontower.erb
@@ -28,7 +28,7 @@
 		<script>
       $(document).ready(function() {
       	setTimeout(function() {
-        	$('#content').load('/moontower-barkeeper');}, 5000);
+        	$('#content').load('/moontower');}, 5000);
       });
     </script>
 </div>
