--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,5 +1,5 @@
 <div id='content'>
-<div class='alert alert-info'>Your order ticket(below) will update when the order is seen and made. Show the number to your server. Other options are in the upper right navbar.</div>
+<div class='alert alert-info'>Your order(below) will update with icons when seen then made. Show number to your server. Other options are in the upper right navbar.</div>
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
 		<h5><%= @order.venue %> at <%= @order.table %></h5>
