--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -2,7 +2,7 @@
 <h3><%= firstname %>'s Orders</h3><hr>
   <% @orders.each do |order| %>
           
-    <h5><%= order.lastname %> at <%= order.venue %> <%= order.table %></h5>
+    <h5><%= order.venue %> <%= order.table %></h5>
     <h4><%= order.drinks %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
     <p><a href="/orders/<%= order.id %>">Order <%= order.id %> by <%= order.firstname %> <%= order.lastname %></a></p>
     <hr>
@@ -11,7 +11,7 @@
 <script>
   $(document).ready(function() {
     setTimeout(function() {
-      $('#content').load('/user/<%= @phone %>');}, 10000);
+      $('#content').load('/user/<%= phone %>');}, 10000);
   });
 </script>
 </div>
