--- a/views/location/change.erb
+++ b/views/location/change.erb
@@ -1,4 +1,4 @@
-<div class='alert alert-info'>Tell us who you are and where you're sitting.</div>
+<div class='alert alert-info'>Tell us where you've moved to.</div>
 
 	<h3><%= firstname %> <%= lastname %> @<%= venue %></h3>
 
@@ -6,13 +6,15 @@
 
   	<p>
   	<select type="text" name='table'>
-  		<option>Front Covered Patio</option>
-  		<option>Main Patio Near</option>
-  		<option>Main Patio Mid</option>
-  		<option>Main Patio Far</option>
-  		<option>Side Gray Deck</option>
-  		<option>Lawn</option>
-		</select>
+      <option>Front Covered Patio</option>
+      <option>Main Area Near</option>
+      <option>Main Area Mid</option>
+      <option>Main Area Far</option>
+      <option>Washer Pit</option>
+      <option>Lawn</option>
+      <option>Side Lower Deck</option>
+      <option>Side Upper Deck</option>
+    </select>
 	</p>
 
   	<p><input class="btn btn-large btn-info" type='submit' value='Confirm Location'></p>
