--- a/views/moontower/checkin.erb
+++ b/views/moontower/checkin.erb
@@ -1,4 +1,4 @@
-<div class='alert alert-info'>Tell us who you are and where you're at.</div>
+<div class='alert alert-info'>Tell us who you are and what area of <%= venue %> you're at.</div>
 
 	<h3>@<%= venue %></h3>
 
