Changed the orders/drinks beers on tap for moontower

--- a/views/orders/drinks.erb
+++ b/views/orders/drinks.erb
@@ -8,15 +8,20 @@
 	<div class="panel" style="display:none;">
    <h4 style="padding-left:10px;">Drafts</h4>
    <ul>
+   	<li>Bud Lite</li>
+   	<li>Budweiser</li>
    	<li>Miller Lite</li>
-   	<li>Pedernales Classic Hefe-Weizen</li>
-   	<li>Rogness Beardy Guard</li>
-   	<li>Thirsty Planet Yellow Armadillo</li>
-   	<li>Coors Light</li>
+   	<li>Pedernales Classic IPA</li>
+   	<li>Shiner Bock</li>
+    <li>(512) IPA</li>
+    <li>Thirsty Planet Thirsty Goat</li>
+    <li>Dos XX</li>
+    <li>Austin Amber</li>
+    <li>Sierra Nevada Pale Ale</li>
+    <li>Rahr & Sons Ugly Pug</li>
    	<li>Real Ale Firemans #4</li>
-   	<li>(512) IPA</li>
-   	<li>Live Oak Hefe Weizen</li>
-   	<li>Bud Light</li>
+   	<li>Santo</li>
+   	<li>Live Oak HefeWeizen</li>
    </ul>
  	</div>
 </div>
