Changed the alert message on orders/drinks a tweak

--- a/views/orders/drinks.erb
+++ b/views/orders/drinks.erb
@@ -1,4 +1,4 @@
-<div class='alert alert-info'>Be specific so the bartender doesn't totally screw up your drink order.</div>
+<div class='alert alert-info'>Be specific(Draft vs Bottle) so the bartender doesn't totally screw up your drink order.</div>
 
 <h3>@<%= venue %> | <%= table %></h3>
 
