--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -8,7 +8,7 @@
         <div class="span6" style="padding:25px;" >
           <div class="top-row"><h3><%= order.lastname %>, <%= order.firstname %></h3></div>
           <div class="main-row"><h1>Order <%= order.id %></h1></div>
-          <div class="bottom-row"><h3><%= pretty_date(order.created_at) %></h3></div>
+          <div class="bottom-row"><h3></h3></div>
         </div>
 
         <div class="span3 offset3" style="color: #e0e1de">
@@ -22,7 +22,7 @@
         <div class="span6" style="padding:25px;" >
           <div class="top-row"><h3><%= order.lastname %>, <%= order.firstname %></h3></div>
           <div class="main-row"><h1><%= order.drinks %></h1></div>
-          <div class="bottom-row"><h3>Order <%= order.id %> - <%= pretty_date(order.created_at) %></h3></div>
+          <div class="bottom-row"><h3>Order <%= order.id %> - </h3></div>
         </div>
 
         <div class="span3 offset3" style="color: #e0e1de">
@@ -74,6 +74,6 @@
 
     setInterval(function() {
       $('#content').load('/barkeeper #content');
-    }, 5000);
+    }, 10000);
   });
 </script>
